# meshiji

./: .gitignore  CMakeLists.txt  CONFIG.md  CONTRIBUTORS  DESIGN.md  DEVELOPMENT.md  Flutter_Analysis.md  INSTALL.md  LICENSE  LICENSE-AGPLv3  PKGBUILD  README.md  SECURITY.md  TODO.md  USAGE.md  auth.rkt  coderabbit.yaml  info.md  init_voix.fish  main.rkt  pubspec.yaml  test-config.conf  test_voix.sh  version.lua  voix.rkt
.github/workflows/: build.yml  codeql.yml  coderabbit.yml  release.yml
android/: build.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/meshiji/: MainActivity.kt
android/app/src/main/kotlin/com/example/vz_meshiji/: MainActivity.kt
include/: config.hpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_theme.dart  explorer_home.dart  file_tile.dart  logger.dart  main.dart  plugin_manager.dart  settings_dialog.dart  settings_manager.dart  size_cache.dart  trash_manager.dart  utils.dart
lib/app/: meshiji_app.dart
lib/core/responsive/: responsive_layout.dart
lib/features/explorer/presentation/: explorer_page.dart
lib/features/explorer/presentation/widgets/: directory_context_menu.dart  file_context_menu.dart  file_list_item.dart
lib/features/sidebar/: sidebar.dart
lib/models/: file_item.dart
lib/screens/: file_explorer_screen.dart
lib/screens/settings/: settings_screen.dart
lib/services/: file_operations_service.dart  terminal_service.dart
lib/shared/widgets/: app_background.dart  dialogs.dart  frosted_glass.dart  particle_background.dart
lib/theme/: app_theme.dart
lib/theme/tokens/: design_tokens.dart
lib/utils/: app_theme.dart
lib/widgets/: file_list_builder.dart  meshiji_ui.dart
linux/: CMakeLists.txt
linux/flutter/: CMakeLists.txt
linux/runner/: my_application.cc
lua/: config.lua
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: 10-voix.rules  CMakeLists.txt  LICENSE  LICENSE-VCL1.0  auth.cpp  build.fish  config.cpp  env.cpp  logging.cpp  lua_config.cpp  main.cpp  org.veridian.voix.policy  password.cpp  password.cpp.backup  polkit.cpp  test.conf  utils.cpp  voix.conf.sample
src/include/: auth.hpp  config.hpp  env.hpp  logging.hpp  lua_config.hpp  password.hpp  polkit.hpp  utils.hpp
src/lua/: config.lua
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
